// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Track component All tracks hover Artificial Intelligence popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Artificial Intelligence
</button>
`;

exports[`Testing Track component All tracks hover Artificial Intelligence popover 2`] = `
<div
  class="popover-header"
>
  LSA Artificial Intelligence
</div>
`;

exports[`Testing Track component All tracks hover Artificial Intelligence popover 3`] = `
<div
  class="popover-header"
>
  LSA Artificial Intelligence
</div>
`;

exports[`Testing Track component All tracks hover Artificial Intelligence popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Artificial Intelligence
</button>
`;

exports[`Testing Track component All tracks hover Bioinformatics popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Bioinformatics
</button>
`;

exports[`Testing Track component All tracks hover Bioinformatics popover 2`] = `
<div
  class="popover-header"
>
  LSA Bioinformatics
</div>
`;

exports[`Testing Track component All tracks hover Bioinformatics popover 3`] = `
<div
  class="popover-header"
>
  LSA Bioinformatics
</div>
`;

exports[`Testing Track component All tracks hover Bioinformatics popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Bioinformatics
</button>
`;

exports[`Testing Track component All tracks hover Computer Hardware popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computer Hardware
</button>
`;

exports[`Testing Track component All tracks hover Computer Hardware popover 2`] = `
<div
  class="popover-header"
>
  ENG Computer Hardware
</div>
`;

exports[`Testing Track component All tracks hover Computer Hardware popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computer Hardware
</button>
`;

exports[`Testing Track component All tracks hover Computer Hardware popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computer Hardware
</button>
`;

exports[`Testing Track component All tracks hover Computing Infrastructure popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computing Infrastructure
</button>
`;

exports[`Testing Track component All tracks hover Computing Infrastructure popover 2`] = `
<div
  class="popover-header"
>
  ENG Computing Infrastructure
</div>
`;

exports[`Testing Track component All tracks hover Computing Infrastructure popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computing Infrastructure
</button>
`;

exports[`Testing Track component All tracks hover Computing Infrastructure popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computing Infrastructure
</button>
`;

exports[`Testing Track component All tracks hover Data and Information popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Data and Information
</button>
`;

exports[`Testing Track component All tracks hover Data and Information popover 2`] = `
<div
  class="popover-header"
>
  LSA Data and Information
</div>
`;

exports[`Testing Track component All tracks hover Data and Information popover 3`] = `
<div
  class="popover-header"
>
  LSA Data and Information
</div>
`;

exports[`Testing Track component All tracks hover Data and Information popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Data and Information
</button>
`;

exports[`Testing Track component All tracks hover Economics and Computation popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Economics and Computation
</button>
`;

exports[`Testing Track component All tracks hover Economics and Computation popover 2`] = `
<div
  class="popover-header"
>
  LSA Economics and Computation
</div>
`;

exports[`Testing Track component All tracks hover Economics and Computation popover 3`] = `
<div
  class="popover-header"
>
  LSA Economics and Computation
</div>
`;

exports[`Testing Track component All tracks hover Economics and Computation popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Economics and Computation
</button>
`;

exports[`Testing Track component All tracks hover Intelligent Systems popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Intelligent Systems
</button>
`;

exports[`Testing Track component All tracks hover Intelligent Systems popover 2`] = `
<div
  class="popover-header"
>
  ENG Intelligent Systems
</div>
`;

exports[`Testing Track component All tracks hover Intelligent Systems popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Intelligent Systems
</button>
`;

exports[`Testing Track component All tracks hover Intelligent Systems popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Intelligent Systems
</button>
`;

exports[`Testing Track component All tracks hover Robotics and Vision popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Robotics and Vision
</button>
`;

exports[`Testing Track component All tracks hover Robotics and Vision popover 2`] = `
<div
  class="popover-header"
>
  LSA Robotics and Vision
</div>
`;

exports[`Testing Track component All tracks hover Robotics and Vision popover 3`] = `
<div
  class="popover-header"
>
  LSA Robotics and Vision
</div>
`;

exports[`Testing Track component All tracks hover Robotics and Vision popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Robotics and Vision
</button>
`;

exports[`Testing Track component All tracks hover Security popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Security
</button>
`;

exports[`Testing Track component All tracks hover Security popover 2`] = `
<div
  class="popover-header"
>
  LSA Security
</div>
`;

exports[`Testing Track component All tracks hover Security popover 3`] = `
<div
  class="popover-header"
>
  LSA Security
</div>
`;

exports[`Testing Track component All tracks hover Security popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Security
</button>
`;

exports[`Testing Track component All tracks hover Software Development popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Development
</button>
`;

exports[`Testing Track component All tracks hover Software Development popover 2`] = `
<div
  class="popover-header"
>
  ENG Software Development
</div>
`;

exports[`Testing Track component All tracks hover Software Development popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Development
</button>
`;

exports[`Testing Track component All tracks hover Software Development popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Development
</button>
`;

exports[`Testing Track component All tracks hover Software Development popover 5`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Development
</button>
`;

exports[`Testing Track component All tracks hover Software Development popover 6`] = `
<div
  class="popover-header"
>
  LSA Software Development
</div>
`;

exports[`Testing Track component All tracks hover Software Development popover 7`] = `
<div
  class="popover-header"
>
  LSA Software Development
</div>
`;

exports[`Testing Track component All tracks hover Software Development popover 8`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Development
</button>
`;

exports[`Testing Track component All tracks hover Software Systems popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Systems
</button>
`;

exports[`Testing Track component All tracks hover Software Systems popover 2`] = `
<div
  class="popover-header"
>
  LSA Software Systems
</div>
`;

exports[`Testing Track component All tracks hover Software Systems popover 3`] = `
<div
  class="popover-header"
>
  LSA Software Systems
</div>
`;

exports[`Testing Track component All tracks hover Software Systems popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Systems
</button>
`;

exports[`Testing Track component All tracks hover Theory of Computation popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Theory of Computation
</button>
`;

exports[`Testing Track component All tracks hover Theory of Computation popover 2`] = `
<div
  class="popover-header"
>
  ENG Theory of Computation
</div>
`;

exports[`Testing Track component All tracks hover Theory of Computation popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Theory of Computation
</button>
`;

exports[`Testing Track component All tracks hover Theory of Computation popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Theory of Computation
</button>
`;

exports[`Testing Track component All tracks hover Theory of Computation popover 5`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Theory of Computation
</button>
`;

exports[`Testing Track component All tracks hover Theory of Computation popover 6`] = `
<div
  class="popover-header"
>
  LSA Theory of Computation
</div>
`;

exports[`Testing Track component All tracks hover Theory of Computation popover 7`] = `
<div
  class="popover-header"
>
  LSA Theory of Computation
</div>
`;

exports[`Testing Track component All tracks hover Theory of Computation popover 8`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Theory of Computation
</button>
`;

exports[`Testing Track component All tracks hover Web Technology and Applications popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Web Technology and Applications
</button>
`;

exports[`Testing Track component All tracks hover Web Technology and Applications popover 2`] = `
<div
  class="popover-header"
>
  ENG Web Technology and Applications
</div>
`;

exports[`Testing Track component All tracks hover Web Technology and Applications popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Web Technology and Applications
</button>
`;

exports[`Testing Track component All tracks hover Web Technology and Applications popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Web Technology and Applications
</button>
`;

exports[`Testing Track component ENG track hover Computer Hardware popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computer Hardware
</button>
`;

exports[`Testing Track component ENG track hover Computer Hardware popover 2`] = `
<div
  class="popover-header"
>
  ENG Computer Hardware
</div>
`;

exports[`Testing Track component ENG track hover Computer Hardware popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computer Hardware
</button>
`;

exports[`Testing Track component ENG track hover Computer Hardware popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computer Hardware
</button>
`;

exports[`Testing Track component ENG track hover Computing Infrastructure popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computing Infrastructure
</button>
`;

exports[`Testing Track component ENG track hover Computing Infrastructure popover 2`] = `
<div
  class="popover-header"
>
  ENG Computing Infrastructure
</div>
`;

exports[`Testing Track component ENG track hover Computing Infrastructure popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computing Infrastructure
</button>
`;

exports[`Testing Track component ENG track hover Computing Infrastructure popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Computing Infrastructure
</button>
`;

exports[`Testing Track component ENG track hover Intelligent Systems popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Intelligent Systems
</button>
`;

exports[`Testing Track component ENG track hover Intelligent Systems popover 2`] = `
<div
  class="popover-header"
>
  ENG Intelligent Systems
</div>
`;

exports[`Testing Track component ENG track hover Intelligent Systems popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Intelligent Systems
</button>
`;

exports[`Testing Track component ENG track hover Intelligent Systems popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Intelligent Systems
</button>
`;

exports[`Testing Track component ENG track hover Software Development popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Development
</button>
`;

exports[`Testing Track component ENG track hover Software Development popover 2`] = `
<div
  class="popover-header"
>
  ENG Software Development
</div>
`;

exports[`Testing Track component ENG track hover Software Development popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Development
</button>
`;

exports[`Testing Track component ENG track hover Software Development popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Development
</button>
`;

exports[`Testing Track component ENG track hover Theory of Computation popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Theory of Computation
</button>
`;

exports[`Testing Track component ENG track hover Theory of Computation popover 2`] = `
<div
  class="popover-header"
>
  ENG Theory of Computation
</div>
`;

exports[`Testing Track component ENG track hover Theory of Computation popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Theory of Computation
</button>
`;

exports[`Testing Track component ENG track hover Theory of Computation popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Theory of Computation
</button>
`;

exports[`Testing Track component ENG track hover Web Technology and Applications popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Web Technology and Applications
</button>
`;

exports[`Testing Track component ENG track hover Web Technology and Applications popover 2`] = `
<div
  class="popover-header"
>
  ENG Web Technology and Applications
</div>
`;

exports[`Testing Track component ENG track hover Web Technology and Applications popover 3`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Web Technology and Applications
</button>
`;

exports[`Testing Track component ENG track hover Web Technology and Applications popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Web Technology and Applications
</button>
`;

exports[`Testing Track component LSA track hover Artificial Intelligence popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Artificial Intelligence
</button>
`;

exports[`Testing Track component LSA track hover Artificial Intelligence popover 2`] = `
<div
  class="popover-header"
>
  LSA Artificial Intelligence
</div>
`;

exports[`Testing Track component LSA track hover Artificial Intelligence popover 3`] = `
<div
  class="popover-header"
>
  LSA Artificial Intelligence
</div>
`;

exports[`Testing Track component LSA track hover Artificial Intelligence popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Artificial Intelligence
</button>
`;

exports[`Testing Track component LSA track hover Bioinformatics popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Bioinformatics
</button>
`;

exports[`Testing Track component LSA track hover Bioinformatics popover 2`] = `
<div
  class="popover-header"
>
  LSA Bioinformatics
</div>
`;

exports[`Testing Track component LSA track hover Bioinformatics popover 3`] = `
<div
  class="popover-header"
>
  LSA Bioinformatics
</div>
`;

exports[`Testing Track component LSA track hover Bioinformatics popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Bioinformatics
</button>
`;

exports[`Testing Track component LSA track hover Data and Information popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Data and Information
</button>
`;

exports[`Testing Track component LSA track hover Data and Information popover 2`] = `
<div
  class="popover-header"
>
  LSA Data and Information
</div>
`;

exports[`Testing Track component LSA track hover Data and Information popover 3`] = `
<div
  class="popover-header"
>
  LSA Data and Information
</div>
`;

exports[`Testing Track component LSA track hover Data and Information popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Data and Information
</button>
`;

exports[`Testing Track component LSA track hover Economics and Computation popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Economics and Computation
</button>
`;

exports[`Testing Track component LSA track hover Economics and Computation popover 2`] = `
<div
  class="popover-header"
>
  LSA Economics and Computation
</div>
`;

exports[`Testing Track component LSA track hover Economics and Computation popover 3`] = `
<div
  class="popover-header"
>
  LSA Economics and Computation
</div>
`;

exports[`Testing Track component LSA track hover Economics and Computation popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Economics and Computation
</button>
`;

exports[`Testing Track component LSA track hover Robotics and Vision popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Robotics and Vision
</button>
`;

exports[`Testing Track component LSA track hover Robotics and Vision popover 2`] = `
<div
  class="popover-header"
>
  LSA Robotics and Vision
</div>
`;

exports[`Testing Track component LSA track hover Robotics and Vision popover 3`] = `
<div
  class="popover-header"
>
  LSA Robotics and Vision
</div>
`;

exports[`Testing Track component LSA track hover Robotics and Vision popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Robotics and Vision
</button>
`;

exports[`Testing Track component LSA track hover Security popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Security
</button>
`;

exports[`Testing Track component LSA track hover Security popover 2`] = `
<div
  class="popover-header"
>
  LSA Security
</div>
`;

exports[`Testing Track component LSA track hover Security popover 3`] = `
<div
  class="popover-header"
>
  LSA Security
</div>
`;

exports[`Testing Track component LSA track hover Security popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Security
</button>
`;

exports[`Testing Track component LSA track hover Software Development popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Development
</button>
`;

exports[`Testing Track component LSA track hover Software Development popover 2`] = `
<div
  class="popover-header"
>
  LSA Software Development
</div>
`;

exports[`Testing Track component LSA track hover Software Development popover 3`] = `
<div
  class="popover-header"
>
  LSA Software Development
</div>
`;

exports[`Testing Track component LSA track hover Software Development popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Development
</button>
`;

exports[`Testing Track component LSA track hover Software Systems popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Systems
</button>
`;

exports[`Testing Track component LSA track hover Software Systems popover 2`] = `
<div
  class="popover-header"
>
  LSA Software Systems
</div>
`;

exports[`Testing Track component LSA track hover Software Systems popover 3`] = `
<div
  class="popover-header"
>
  LSA Software Systems
</div>
`;

exports[`Testing Track component LSA track hover Software Systems popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Software Systems
</button>
`;

exports[`Testing Track component LSA track hover Theory of Computation popover 1`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Theory of Computation
</button>
`;

exports[`Testing Track component LSA track hover Theory of Computation popover 2`] = `
<div
  class="popover-header"
>
  LSA Theory of Computation
</div>
`;

exports[`Testing Track component LSA track hover Theory of Computation popover 3`] = `
<div
  class="popover-header"
>
  LSA Theory of Computation
</div>
`;

exports[`Testing Track component LSA track hover Theory of Computation popover 4`] = `
<button
  class="my-1 w-100 btn btn-primary"
  type="button"
>
  Theory of Computation
</button>
`;
